<resources>
    <string name="app_name">PlayOff</string>

    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="login_text">Login</string>

    <string name="signup_text">Signup</string>
    <string name="firstname_text">First Name</string>
    <string name="lastname_text">Last Name</string>
    <string name="password_text">Password</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="otp_text">OTP</string>
    <string name="password_helper_text">Minimum 8 characters</string>
    <string name="email_helper_text">Ex: example@email.com</string>
    <string name="cancel_text">Cancel</string>
    <string name="firstname_helper_text">Ex: Bob</string>
    <string name="lastname_helper_text">Ex: Roger</string>
    <string name="otp_helper_text">6 digits</string>
    <string name="generate_otp_text">Generate otp</string>
    <string name="confirm_password_helper_text">Re-enter Password</string>
    <string name="resend_text">Resend</string>
    <string name="forgot_password_question">Forgot password?</string>

    <string name="recent_text">Recent</string>
    <string name="tournament_text">Tournaments</string>
    <string name="team_text">Teams</string>

    <string name="create_text">Create</string>

    <string name="start_date_text">Starts at</string>
    <string name="players_required_text">Players required</string>

    <string name="players_required_text_placeholder">: %1$d - %2$d per team</string>

    <string name="chip_any_text">Any</string>
    <string name="chip_bhavnagar_text">Bhavnagar</string>

    <string name="team_playing_text_placeholder">%1$d/%2$d</string>
    <string name="team_playing_text">Playing</string>
    <string name="no_team_placeholder_text">Not Participated</string>

    <string name="team_name_text">Team Name</string>
    <string name="create_team_text">Create Team</string>

    <string name="join_text">Join</string>
    <string name="unjoin_text">Un-join</string>
    <string name="start_date_text_placeholder">Starts at : %1$s</string>
    <string name="end_date_text_placeholder">Ends at : %1$s</string>
    <string name="players_per_team_text">Players per team</string>
    <string name="minimum_teams_text_placeholder">Minimum ~ %1$d</string>
    <string name="maximum_teams_text_placeholder">Maximum ~ %1$d</string>
    <string name="teams_joined_text_placeholder">Teams joined\n(minimum ~ %1$d)</string>
    <string name="pattern_placeholder">~~~~~~~~~~~~~~~~~~~~~~~</string>
    <string name="total_teams_joined_text_placeholder">%1$d/%2$d</string>
    <string name="description_text">Description:</string>

    <string name="create_tournament_text">Create tournament</string>
    <string name="title_text">Title</string>
    <string name="game_name_text">Game name</string>
    <string name="tournament_dates_text">Tournament dates</string>
    <string name="end_date_text">Ends at</string>
    <string name="date_input_hint">dd-mm-yyyy</string>
    <string name="time_input_hint">hh:mm</string>
    <string name="teams_required_text">Teams Required</string>
    <string name="minimum_teams_text">Minimum teams</string>
    <string name="maximum_teams_text">Maximum teams</string>
    <string name="minimum_players_text">Minimum players</string>
    <string name="maximum_players_text">Maximum players</string>
    <string name="location_text">Location</string>

    <string name="team_playing_players_text">Playing %1$d/%2$d</string>

    <string-array name="location_array">
        <item>Any</item>
        <item>Bhavnagar</item>
    </string-array>

    <string name="forgot_password_text">Forgot password</string>
    <string name="change_text">Change</string>

    <string name="no_participate_text">No tournaments or teams participated or created</string>
</resources>