<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="viewModel"
                  type="com.shahdarshil.playoff.user.forgotpassword.ForgotPasswordViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".user.forgotpassword.ForgotPasswordFragment"
            android:id="@+id/forgot_password_constraint_layout">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/forgot_password_text"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                tools:text="Forgot Password" android:textAlignment="center" android:textColor="@color/colorPrimary"
                android:textStyle="bold" android:textAllCaps="true" android:textSize="24sp"
                android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
                app:layout_constraintVertical_chainStyle="spread"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="70dp"
                android:text="@string/forgot_password_text"/>
        <com.google.android.material.textfield.TextInputLayout android:layout_width="0dp"
                                                               android:layout_height="wrap_content"
                                                               android:id="@+id/password_text_input_forgot_password"
                                                               app:layout_constraintStart_toStartOf="@+id/forgot_password_text"
                                                               app:layout_constraintEnd_toEndOf="@+id/forgot_password_text"
                                                               app:layout_constraintHorizontal_bias="0.5"
                                                               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                                               app:passwordToggleEnabled="true"
                                                               app:errorEnabled="true"
                                                               app:hintEnabled="true"
                                                               app:layout_constraintTop_toBottomOf="@+id/forgot_password_text"
                                                               android:layout_marginTop="140dp">
            <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                     android:layout_height="match_parent"
                                                                     android:hint="@string/password_text"
                                                                     android:id="@+id/password_edit_text_forgot_password"
                                                                     android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
                                                               android:layout_height="wrap_content"
                                                               android:id="@+id/confirm_password_text_input_forgot_password"
                                                               app:layout_constraintStart_toStartOf="@+id/password_text_input_forgot_password"
                                                               app:layout_constraintEnd_toEndOf="@+id/password_text_input_forgot_password"
                                                               app:layout_constraintHorizontal_bias="0.5"
                                                               app:hintEnabled="true"
                                                               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                                               app:errorEnabled="true"
                                                               app:passwordToggleEnabled="true"
                                                               android:layout_marginStart="16dp"
                                                               android:layout_marginEnd="16dp"
                                                               app:layout_constraintTop_toBottomOf="@+id/password_text_input_forgot_password">
            <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                     android:hint="@string/confirm_password_helper_text"
                                                                     android:layout_height="match_parent"
                                                                     android:id="@+id/confirm_password_edit_text_forgot_password"
                                                                     android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout android:layout_width="164dp"
                                                               android:layout_height="wrap_content"
                                                               android:id="@+id/otp_text_input_forgot_password"
                                                               app:layout_constraintStart_toStartOf="@+id/confirm_password_text_input_forgot_password"
                                                               app:layout_constraintEnd_toEndOf="@+id/confirm_password_text_input_forgot_password"
                                                               app:layout_constraintHorizontal_bias="1.0"
                                                               app:hintEnabled="true"
                                                               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                                               app:errorEnabled="true"
                                                               app:counterMaxLength="6"
                                                               app:layout_constraintTop_toBottomOf="@+id/confirm_password_text_input_forgot_password">
            <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                     android:hint="@string/otp_text"
                                                                     android:layout_height="match_parent"
                                                                     android:id="@+id/otp_edit_text_forgot_password"
                                                                     android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton android:layout_width="wrap_content"
                                                           android:layout_height="wrap_content"
                                                           android:layout_marginEnd="16dp"
                                                           android:onClick="@{() -> viewModel.onChangeClicked()}"
                                                           app:layout_constraintEnd_toEndOf="parent"
                                                           app:layout_constraintBottom_toBottomOf="parent"
                                                           android:layout_marginBottom="16dp" tools:text="Change"
                                                           android:id="@+id/change_button_forgot_password"
                                                           android:text="@string/change_text"/>

        <com.google.android.material.button.MaterialButton android:layout_width="wrap_content"
                                                           android:layout_height="wrap_content"
                                                           style="@style/Widget.MaterialComponents.Button.TextButton"
                                                           app:layout_constraintEnd_toStartOf="@+id/change_button_forgot_password"
                                                           android:layout_marginEnd="16dp"
                                                           android:onClick="@{() -> viewModel.onCancelClicked()}"
                                                           app:layout_constraintBaseline_toBaselineOf="@+id/change_button_forgot_password"
                                                           android:text="@string/cancel_text"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>